# jaft

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
jaft/: __main__.py  servers.py
tests/: test_jaft.py  test_servers.py  util.py
